kubernetes/notes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: notes
  name: notes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes
  template:
    metadata:
      labels:
        app: notes
    spec:
      containers:
        - name: notes
          image: docker.pkg.github.com/dukekan/notes/notes:1.2
          ports:
            - containerPort: 7555
      imagePullSecrets:
        - name: notes-secret # used to pull images from github
