kubernetes/notes-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: notes-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: notes.site
    http:
      paths:
      - path: /*
        backend:
          serviceName: notes
          servicePort: 7555
